[package]
name = "rust_cryptopals"
version = "0.1.0"
authors = ["User420"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# openssl = { version = "0.10", features = ["vendored"] }
openssl = "0.10"
rand = "0.8.4"
url = "2.2.2"

[dependencies.hex]
path = "./hex"

[dependencies.base64]
path = "./base64"

[dependencies.aes]
path = "./aes"

[dependencies.aes_oracle]
path = "./aes_oracle"
