[package]
name = "rust_cryptopals"
version = "0.1.0"
authors = ["User420"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "cryptopals"
# path = "src/lib.rs"

# [set1]
# name = "set1"
# path = "src/set1.rs"

[[test]]
name = "custom"
path = "src/tests.rs"

[dependencies]
openssl = "0.10"

[dependencies.hex]
path = "./hex"

[dependencies.base64]
path = "./base64"

[dependencies.aes]
path = "./aes"

[dependencies.oracle]
path = "./oracle"

[dependencies.aes_oracle]
path = "./aes_oracle"

[dependencies.cookie_oracle]
path = "./cookie_oracle"
