[package]
name = "aes_oracle"
version = "0.1.0"
authors = ["User420"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[dependencies.aes]
path = "../aes"

[dependencies.hex]
path = "../hex"

[dependencies.oracle]
path = "../oracle"

[dependencies.base64]
path = "../base64"
