[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[dependencies.aes]
path = "../aes"

[dependencies.hex]
path = "../hex"

[dependencies.base64]
path = "../base64"
